--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,23 @@
-<!-- Main file -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Tic-Tac-Toe</title>
+    <style>
+
+td {
+  width:200px;
+  height:200px;
+  background:blue;
+}
+    </style>
+  </head>
+  <body>
+    <h1>Tic Tac Toe!</h1>
+    <table>
+      <tr><td></td><td></td><td></td></tr>
+      <tr><td></td><td></td><td></td></tr>
+      <tr><td></td><td></td><td></td></tr>
+    <table>
+  </body>
+</html>
