--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,13 @@ td {
 }
     </style>
   </head>
-  <body>
+  <body onload="init()">
     <h1>Tic Tac Toe!</h1>
-    <table>
+    <table id="gameboard">
       <tr><td></td><td></td><td></td></tr>
       <tr><td></td><td></td><td></td></tr>
       <tr><td></td><td></td><td></td></tr>
     <table>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
