--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Tic-Tac-Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <style>
 
 td {
@@ -10,14 +13,27 @@ td {
   height:200px;
   background:blue;
 }
+
+.message {
+  font-family: 'Roboto', sans-serif;
+  font-size:48px;
+  padding:16px;
+}
+
     </style>
   </head>
-  <body>
+  <body onload="init()">
     <h1>Tic Tac Toe!</h1>
-    <table>
+    <table id="gameboard">
       <tr><td></td><td></td><td></td></tr>
       <tr><td></td><td></td><td></td></tr>
       <tr><td></td><td></td><td></td></tr>
     <table>
+    <div class="message" id="state_you">Your turn!  Click a square!</div>
+    <div class="message" id="state_other">Wait for your foe...</div>
+    <div class="message" id="state_none">
+      <button class="message" onclick="play">Play!</button>
+    </div>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
