Adding the smile & frown faces for win / loss state.

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,12 @@ td {
     <div class="message" id="state_none">
       <button class="message" onclick="readyToPlay">Play!</button>
     </div>
+    <div div class="message" id="state_done_smile">
+      <img src="smile.png" alt="">
+    </div>
+    <div div class="message" id="state_done_frown">
+      <img src="frown.png" alt="">
+    </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
