Adding code for ties.

--- a/client/index.html
+++ b/client/index.html
@@ -35,11 +35,14 @@ td {
     <div class="message" id="state_none">
       <button class="message" onclick="readyToPlay">Play!</button>
     </div>
-    <div div class="message" id="state_done_smile">
+    <div div class="message" id="state_win">
       <img src="smile.png" alt="">
     </div>
-    <div div class="message" id="state_done_frown">
+    <div div class="message" id="state_loss">
       <img src="frown.png" alt="">
+    </div>
+    <div div class="message" id="state_tie">
+      <img src="meh.png" alt="">
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
