Moving newx newo to assets.  Fixing img src for smile, frown and meh.

--- a/client/index.html
+++ b/client/index.html
@@ -36,13 +36,13 @@ td {
       <button class="message" onclick="readyToPlay">Play!</button>
     </div>
     <div div class="message" id="state_win">
-      <img src="smile.png" alt="">
+      <img src="assets/smile.png" alt="">
     </div>
     <div div class="message" id="state_loss">
-      <img src="frown.png" alt="">
+      <img src="assets/frown.png" alt="">
     </div>
     <div div class="message" id="state_tie">
-      <img src="meh.png" alt="">
+      <img src="assets/meh.png" alt="">
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
