--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@ td {
     <div class="message" id="state_you">Your turn!  Click a square!</div>
     <div class="message" id="state_other">Wait for your foe...</div>
     <div class="message" id="state_none">
-      <button class="message" onclick="readyToPlay">Play!</button>
+      <button class="message" onclick="readyToPlay()">Play!</button>
     </div>
     <div div class="message" id="state_win">
       <img src="assets/smile.png" alt="">
