Blow the faces up a little less.

--- a/client/index.html
+++ b/client/index.html
@@ -36,12 +36,12 @@ td {
       <button class="message" onclick="readyToPlay()">Play!</button>
     </div>
     <div div class="message" id="state_win">
-      <img src="assets/smile.png" alt="" width=200 height=200>
+      <img src="assets/smile.png" alt="" width=150px height=150px>
     </div>
-    <div div class="message" id="state_loss" width=200 height=20>
+    <div div class="message" id="state_loss" width=150px height=150px>
       <img src="assets/frown.png" alt="">
     </div>
-    <div div class="message" id="state_tie" width=200 height=20>
+    <div div class="message" id="state_tie" width=150px height=150px>
       <img src="assets/meh.png" alt="">
     </div>
     <script type="text/javascript" src="main.js"></script>
