Add some explanation to the faces.

--- a/client/index.html
+++ b/client/index.html
@@ -37,12 +37,15 @@ td {
     </div>
     <div div class="message" id="state_win">
       <img src="assets/smile.png" alt="" width=150px height=150px>
+      <div>You Won!</div>
     </div>
     <div div class="message" id="state_loss" width=150px height=150px>
       <img src="assets/frown.png" alt="">
+      <div>You Lost!</div>
     </div>
     <div div class="message" id="state_tie" width=150px height=150px>
       <img src="assets/meh.png" alt="">
+      <div>Tie :|</div>
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
