Make the gameboard a bit smaller.

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,14 @@
     <style>
 
 td {
-  width:200px;
-  height:200px;
+  width:100px;
+  height:100px;
   background:blue;
+}
+
+td img {
+  width: 100px;
+  height: 100px;
 }
 
 .message {
